<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/CBappSelect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/ic_check"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:includeFontPadding="false"
            android:longClickable="false"
            android:visibility="gone" />

        <ViewSwitcher
            android:id="@+id/viewSwitcherChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/IVappIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/IconDescriber"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher" />


            <ImageView
                android:id="@+id/IVappIconBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/IconSelectDescriber"
                android:scaleType="centerCrop"
                app:tint="?attr/colorOnPrimary"
                app:srcCompat="@drawable/ic_check" />

        </ViewSwitcher>

    <ImageView
        android:id="@+id/IVappIconnow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/IconDescriber"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
            android:id="@+id/title_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/TVappName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/request_dummy_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVappPackage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/request_dummy_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TVappClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/request_dummy_text"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
